--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,8 @@
         "roave/security-advisories": "dev-master",
         "symfony/http-kernel": "^3.3",
         "symfony/dependency-injection": "^3.3",
+        "symfony/config": "^3.3",
+        "symfony/finder": "^3.3",
         "flying/object-builder": "^0.1"
     },
     "require-dev": {
