--- a/composer.json
+++ b/composer.json
@@ -24,14 +24,14 @@
     },
     "require": {
         "php": ">=7.1",
-        "roave/security-advisories": "dev-master",
-        "symfony/http-kernel": "^3.3",
-        "symfony/dependency-injection": "^3.3",
-        "symfony/config": "^3.3",
-        "symfony/finder": "^3.3",
+        "symfony/http-kernel": "^3.3|^4.0",
+        "symfony/dependency-injection": "^3.3|^4.0",
+        "symfony/config": "^3.3|^4.0",
+        "symfony/finder": "^3.3|^4.0",
         "flying/object-builder": "^0.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.4"
+        "phpunit/phpunit": "^6.4",
+        "roave/security-advisories": "dev-master"
     }
 }
